tests/ui/literal_list_element.stderr
error: proc-macro derive panicked
  --> $DIR/literal_list_element.rs:13:10
   |
13 | #[derive(Clap, Debug)]
   |          ^^^^
   |
   = help: message: unsupported option: test ( 1 , 2 )
